# yolov5m6_onnx_modifier

./: README.md  pyproject.toml
src/yolov5m6_onnx_modifier/: main.py
